--- a/basesite4.html
+++ b/basesite4.html
@@ -45,14 +45,14 @@
         <aside class="left-col">
             <div class="sidebar-header">BIENVENUE</div>
             <div class="intro-text">
-                Bienvenue sur Glam & Archives - Le seul site où la diplomatique rencontre le drama !
+                Bienvenue sur GLAM & Gossip - Le seul site où la diplomatique rencontre le drama !
             </div>
 
             <div class="sidebar-header" style="transform: rotate(-3deg); margin-top:15px; font-size: 18px;">ENVOYEZ VOS SCOOPS !</div>
             <div class="intro-text">
                 Un document mal coté ?<br>
                 Une rumeur à l'ENC ?<br>
-                <a href="#" class="email-link">Gossip@aol.com</a>
+                <a href="#" class="email-link">gossipENC@aol.com</a>
             </div>
 
             <div class="top-celebs-widget">
@@ -176,7 +176,6 @@
             <div class="glam-tv-container">
                 <div class="glam-tv-header">
                     <div class="tv-logo">ARCHIVES <span>TV</span></div>
-                    <div class="tv-tabs"><span>Récents</span><span>Populaires</span></div>
                 </div>
                 <div class="video-list">
                     <div class="video-item">
