--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
     </div> 
 
     <footer>
-        COPYRIGHT © 2006-2024 GLAM & ARCHIVES INC. <br> 
-        Site parodique réalisé pour l'amour de la Chartes. XOXO.
+        COPYRIGHT © 2006-2024 GLAM & GOSSIP INC. <br> 
+        Site parodique réalisé pour l'amour de l'ENC et du drama XOXO.
     </footer>
 
 </div>
