--- a/basesite4.html
+++ b/basesite4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Glam & Archives — Le site le plus Chartiste du Web !</title>
+    <title>Glam & Gossip — Le site le plus Chartiste du Web !</title>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Permanent+Marker&family=Verdana&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -45,14 +45,14 @@
         <aside class="left-col">
             <div class="sidebar-header">BIENVENUE</div>
             <div class="intro-text">
-                Bienvenue sur Glam & Archives - Le seul site où la diplomatique rencontre le drama !
+                Bienvenue sur Glam & Gossip - Le seul site où la diplomatique rencontre le drama !
             </div>
 
             <div class="sidebar-header" style="transform: rotate(-3deg); margin-top:15px; font-size: 18px;">ENVOYEZ VOS SCOOPS !</div>
             <div class="intro-text">
                 Un document mal coté ?<br>
                 Une rumeur à l'ENC ?<br>
-                <a href="#" class="email-link">Gossip@aol.com</a>
+                <a href="#" class="email-link">gossip@aol.com</a>
             </div>
 
             <div class="top-celebs-widget">
