--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="top-bar">
             <div class="logo-area">
                 <div class="welcome-text">Bienvenue sur</div>
-                <h1 class="logo">GLAM & ARCHIVES<span class="enc">.ENC</span></h1>
+                <h1 class="logo">GLAM & GOSSIP<span class="enc">.ENC</span></h1>
             </div>
         </div>
         <div class="slogan">Galleries, Libraries, Archives & Museums — Digitally Divine, Paleographically Petty</div>
