--- a/basesite4.html
+++ b/basesite4.html
@@ -26,11 +26,13 @@
             <a href="#">Accueil</a>
             <a href="#">Photos</a>
             <a href="#">Thèses Scandales</a>
-        </div>
-        <div class="search-box">
-            <input type="text" placeholder="Rechercher un prof..." size="20">
-            <button>SEARCH!</button>
-        </div>
+<div class="search-box">
+    <form action="https://www.google.com/search" method="get">
+        <input type="text" name="q" placeholder="Rechercher un prof..." size="20">
+        <button type="submit">SEARCH!</button>
+    </form>
+</div>
+
     </nav>
 
     <div class="buzz-banner">
