--- a/index.html
+++ b/index.html
@@ -28,9 +28,12 @@
             <a href="#">Thèses Scandales</a>
         </div>
         <div class="search-box">
-            <input type="text" placeholder="Rechercher un prof..." size="20">
-            <button>SEARCH!</button>
-        </div>
+    <form action="https://www.google.com/search" method="get">
+        <input type="text" name="q" placeholder="Rechercher un prof..." size="20">
+        <button type="submit">SEARCH!</button>
+    </form>
+</div>
+
     </nav>
 
     <div class="buzz-banner">
