--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
             <a href="#">Accueil</a>
             <a href="#">Photos</a>
             <a href="#">Thèses Scandales</a>
-        </div>
-      <div class="search-box">
+       <div class="search-box">
     <form action="https://www.google.com/search" method="get">
-        <input type="hidden" name="tbs" value="qdr:y6,date:2006">
-        <input type="text" name="q" placeholder="Rechercher un prof 2006..." size="20">
+        <input type="hidden" name="tbs" value="cdr:1,cd_min:1/1/2006,cd_max:12/31/2006">
+        <input type="text" name="q" placeholder="Rechercher 2006..." size="20">
         <button type="submit">SEARCH!</button>
     </form>
 </div>
+
 
 
     </nav>
