--- a/basesite4.html
+++ b/basesite4.html
@@ -28,8 +28,8 @@
             <a href="#">Thèses Scandales</a>
 <div class="search-box">
     <form action="https://www.google.com/search" method="get">
-        <input type="hidden" name="tbs" value="qdr:y6,date:2006">
-        <input type="text" name="q" placeholder="Rechercher un prof 2006..." size="20">
+        <input type="hidden" name="tbs" value="cdr:1,cd_min:1/1/2006,cd_max:12/31/2006">
+        <input type="text" name="q" placeholder="Rechercher 2006..." size="20">
         <button type="submit">SEARCH!</button>
     </form>
 </div>
